# app/models/car.js
@@ -17,12 +17,24 @@ module.exports = (sequelize, DataTypes) => {
     }
   }
   car.init({
-    name: DataTypes.TEXT,
-    color: DataTypes.STRING,
-    transmission: {type:DataTypes.INTEGER,
-      validate:{max:2,min:1}},
-    deleted: {type:DataTypes.INTEGER,
-      validate:{max:1,min:0}},
+    name: {type : DataTypes.TEXT,allowNull:false,
+      validate:{
+        checkType(value){
+          if (typeof value !== typeof 'string') {
+            throw new Error("Name Must be string");
+          }
+        }
+      }},
+    color: {type : DataTypes.STRING,
+      allowNull:false,validate:{
+        checkType(value){
+          if (typeof value !== typeof 'string') {
+            throw new Error("Color Must be string");
+          }
+        }
+      }},
+    transmission:{type:DataTypes.INTEGER,allowNull:false,validate:{max:2}},
+    deleted: {type:DataTypes.INTEGER,validate:{max:1}},
     deleted_at: DataTypes.DATE
   }, {
     sequelize,
